# terminal-window-management

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_FIX.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
tests/: __init__.py  test_colors.py  test_profiles.py  test_window.py
twm/: __init__.py  cli.py  colors.py  config.py  groups.py  profiles.py  terminal.py  window.py
twm/examples/: code-review.yaml  dev-env.yaml  monitoring.yaml
